--- a/imagetool-core/pom.xml
+++ b/imagetool-core/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>com.ldygo</groupId>
+        <groupId>com.ahua</groupId>
         <artifactId>imagetool</artifactId>
         <version>1.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ldygo</groupId>
+    <groupId>com.ahua</groupId>
     <artifactId>imagetool-core</artifactId>
     <packaging>jar</packaging>
 
